--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ ul li a {
   color: var(--textcolor);
   justify-content: center;
   align-items: center;
+  text-align: center;
   text-decoration: none;
   font-weight: 500;
 }
