Adaptando o fundo para diferentes dispositivos usando o media queries

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .light {
   --textcolor: black;
-  --bg-url: url(./assets/bg-desktop-light.jpg);
+  --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.1);
   --stroke-color-hover: black;
   --surface-color: rgba(0, 0, 0, 0.05);
@@ -154,4 +154,13 @@ footer {
 footer a {
   display: inline;
   font-weight: bold;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
